--- a/features.html
+++ b/features.html
@@ -24,7 +24,7 @@ details > summary::-webkit-details-marker {
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title"><a href="https://niklas20114552.github.io" style="text-decoration: none; color: white"><img src="https://niklas20114552.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</a></span>
+        <span class="mdl-layout-title"><a href="https://arch-tui-installer.github.io" style="text-decoration: none; color: white"><img src="https://arch-tui-installer.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</a></span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
@@ -38,7 +38,7 @@ details > summary::-webkit-details-marker {
       </div>
     </header>
     <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-    <span class="mdl-layout-title"><a href="https://niklas20114552.github.io" style="text-decoration: none"><img src="https://niklas20114552.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</span>
+    <span class="mdl-layout-title"><a href="https://arch-tui-installer.github.io" style="text-decoration: none"><img src="https://arch-tui-installer.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</span>
     <nav class="mdl-navigation">
 	    <a class="mdl-navigation__link" href="download.html">Download</a>
 	    <a class="mdl-navigation__link" href="features.html">Features</a>
