--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="mdl-navigation__link" href="features.html">Features</a>
           <a target="_blank" class="mdl-navigation__link" href="https://github.com/Niklas20114552/arch-tui-installer">Github</a>
           <a target="_blank" class="mdl-navigation__link" href="https://github.com/Niklas20114552/arch-tui-installer/wiki">Documentation</a>
-          <a target="_blank" class="mdl-navigation__link" href="https://archlinux.org"><Archlinux</a>
+          <a target="_blank" class="mdl-navigation__link" href="https://archlinux.org">Archlinux</a>
         </nav>
       </div>
     </header>
