--- a/download.html
+++ b/download.html
@@ -35,7 +35,7 @@
 	    <a class="mdl-navigation__link" href="features.html">Features</a>
 	    <a target="_blank" class="mdl-navigation__link" href="https://github.com/Niklas20114552/arch-tui-installer">Github</a>
 	    <a target="_blank" class="mdl-navigation__link" href="https://github.com/Niklas20114552/arch-tui-installer/wiki">Documentation</a>
-	    <a target="_blank" class="mdl-navigation__link" href="https://archlinux.org"><img src="https://arch-tui-installer.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Archlinux</a>
+	    <a target="_blank" class="mdl-navigation__link" href="https://archlinux.org">Archlinux</a>
     </nav>
   </div>
 		<p style="text-align: center; font-size: 20pt"><br>Download<br><br></p>
