Added Info for v1.6

--- a/features.html
+++ b/features.html
@@ -24,7 +24,7 @@ details > summary::-webkit-details-marker {
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title"><a href="https://arch-tui-installer.github.io" style="text-decoration: none; color: white"><img src="https://arch-tui-installer.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</a></span>
+        <span class="mdl-layout-title"><a href="https://niklas20114552.github.io" style="text-decoration: none; color: white"><img src="https://niklas20114552.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</a></span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
@@ -38,7 +38,7 @@ details > summary::-webkit-details-marker {
       </div>
     </header>
     <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-    <span class="mdl-layout-title"><a href="https://arch-tui-installer.github.io" style="text-decoration: none"><img src="https://arch-tui-installer.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</span>
+    <span class="mdl-layout-title"><a href="https://niklas20114552.github.io" style="text-decoration: none"><img src="https://niklas20114552.github.io/favicon.png" style="height: 64px; width: 64px;"></img>Arch Installer</span>
     <nav class="mdl-navigation">
 	    <a class="mdl-navigation__link" href="download.html">Download</a>
 	    <a class="mdl-navigation__link" href="features.html">Features</a>
@@ -59,6 +59,8 @@ details > summary::-webkit-details-marker {
 			<p><details><summary>- Three installation modes: Basic, Full and 2Steps (Click to read more)</summary>Basic: Installs Archlinux without a desktop.<br>Full: Installs the basic Archlinux and after a reboot, the desktop will be automaticly installed.<br>2Steps: Installs Archlinux without any setting and configuratation. Only the partitions will be configured.<br>After a reboot the user will configure the system with a setup-script (like the OutOfBoxExperience in Windows).</details></p>
 			<p>- Automated Partitioning</p>
 			<p>- Automated Hardware detection for CPU and GPU</p>
+			<p>- BTRFS-Support</p>
+			<p>- Integreated Updater so that is Setup is also up-to-date</p>
 			<p>- Recently updated</p>
 			<br><br>
 			<p style="font-size: 18pt">So what are you wating for?</p>
