Fix grammatic typo

--- a/features.html
+++ b/features.html
@@ -60,7 +60,7 @@ details > summary::-webkit-details-marker {
 			<p>- Automated Partitioning</p>
 			<p>- Automated Hardware detection for CPU and GPU</p>
 			<p>- BTRFS-Support</p>
-			<p>- Integreated Updater so that is Setup is also up-to-date</p>
+			<p>- Integrated Updater so that is Setup is also up-to-date</p>
 			<p>- Recently updated</p>
 			<br><br>
 			<p style="font-size: 18pt">So what are you wating for?</p>
